# config

./: db.sqlite3  pyproject.toml
config/: serializers.py  settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_acessorio_cor_veiculo.py  0002_veiculo_capa.py  0003_modelo_alter_acessorio_options_alter_cor_options_and_more.py  0003_remove_veiculo_capa_veiculo_capa.py  0004_alter_acessorio_options_alter_cor_options_and_more.py  0004_veiculo_acessorios.py  0005_remove_marca_nacionalidade.py
garagem/models/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  acessorio.py  modelo.py  veiculo.py
garagem/views/: veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
